[project]
name = "haram_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
	".", "src",
]


[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = " pip install git+https://github.com/HaramSs/args_history.git@0.2.0"

[project.scripts]
my-history = 'haram_args_history.cli:cmd'

[project.urls]
Homepage =  "https://github.com/HaramSs/args_history.git"
Issues = "https://packaging.python.org/en/latest/tutorials/packaging-projects/"
